--- a/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.html
+++ b/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.html
@@ -11,11 +11,11 @@
     </mat-slide-toggle>
   </div>
 </div>
-<div *ngIf="formControllerName === 'chartOfAccount'" class="configuration--field-toggle-section">
+<div *ngIf="formControllerName === 'chartOfAccount'" class="configuration--field-toggle-note-section">
   <h5 class="configuration--field-label sub-text-color paragraph">NOTE: If you have already created categories in Fyle, you can skip this and map your <br> categories to corresponding Xero accounts after completing configuration in <b>Integration <br> Dashboard > Mappings Section </b></h5>
 </div>
 <div *ngIf="formControllerName === 'importCustomers'" class="configuration--field-toggle-note-section">
-  <h5 class="configuration--field-label sub-text-color paragraph">NOTE: To export billable expenses from Fyle, map Customers in Xero to Projects in Fyle.</h5>
+  <h5 class="configuration--field-label sub-text-color paragraph">NOTE: To export billable expenses from Fyle, import Customers from Xero as Projects in Fyle.</h5>
 </div>
 
 <!-- Advanced Setting Page - with icon -->
