--- a/src/app/shared/components/configuration/import-settings/import-settings.component.html
+++ b/src/app/shared/components/configuration/import-settings/import-settings.component.html
@@ -35,8 +35,8 @@
         </div>
 
         <app-configuration-toggle-field [form]="importSettingsForm"
-          [label]="'Import Xero customers as Projects in Fyle'"
-          [subLabel]="'The imported Customers from Xero will be a selectable field while creating an expense.'"
+          [label]="'Import Customers from Xero'"
+          [subLabel]="'The Customers in Xero will be imported as Projects in Fyle and will be a selectable field while creating an expense.'"
           [formControllerName]="'importCustomers'">
         </app-configuration-toggle-field>
 
