--- a/src/app/integration/main/main.component.scss
+++ b/src/app/integration/main/main.component.scss
@@ -28,6 +28,7 @@
     padding: 13px 0px 13px 24px;
     height: 48px;
     width: 260px;
+    align-items: center;
 
     &:hover {
       background: #252841;
@@ -39,6 +40,7 @@
     padding: 13px 0px 13px 24px;
     height: 48px;
     width: 257px;
+    align-items: center;
 
     &:hover {
       background: #252841;
@@ -77,7 +79,6 @@
 
   &--module-block-text {
     padding-left: 14px;
-    padding-top: 5px;
     width: 146px;
   }
 
@@ -104,6 +105,10 @@
     width: 212px;
     margin-left: 24px;
     opacity: 0.1;
+  }
+
+  &--align-items {
+    align-items: center;
   }
 }
 
