--- a/src/styles.scss
+++ b/src/styles.scss
@@ -575,16 +575,19 @@ th.mat-header-cell:last-of-type {
     @media only screen and (max-width: 1440px) {
       width: 1178px;
     }
+    height: 450px;
   }
 
   &--bg-top {
     @extend .configuration-main--main;
+    position: absolute;
     background: linear-gradient(97.33deg, #E1EEFF 26.8%, #FFE4FB 97.18%);
     height: 282px;
   }
 
   &--bg-bottom {
     @extend .configuration-main--main;
+    position: absolute;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
     top: 162px;
     height: 192px;
