--- a/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
+++ b/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
@@ -45,10 +45,10 @@
             <app-loader [size]="'small'"></app-loader>
           </p>
         </div>
-        <div *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired" class="align-center default-cursor">
+        <div *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired && !isDisconnectxeroClicked" class="align-center default-cursor">
           <mat-form-field floatLabel="always" appearance="outline">
             <mat-select placeholder="Select a Xero tenant" formControlName="xeroTenant">
-              <mat-option *ngFor="let option of tenantList" [value]="{id: option.destination_id, name: option.value}">
+              <mat-option *ngFor="let option of tenantList" [value]="{id: option.destination_id, name: option.value}" (click)="isContinueDisabled = false">
                 {{ option.value }}
                 <img *ngIf="(xeroConnectorForm.value.xeroTenant | json) === ({id: option.destination_id, name: option.value} | json)" src="assets/images/svgs/general/tick-pink.svg" class="selected-value-check-mark">
               </mat-option>
@@ -60,9 +60,9 @@
           <div class="xero-connector--org-switch-separator"></div>
           <div class="xero-connector--switch-org-inner-section">
             <h4 *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired" class="xero-connector--connection-in-progress-text align-center sub-text-color"> 
-              will need to select a tenant to proceed with the onboarding.
+              You will need to select a tenant to proceed with the onboarding.
             </h4>
-            <h4 *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired" (click)="connectXero()" class="xero-connector--switch-org-text actionable-text align-center">
+            <h4 *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired && isDisconnectxeroClicked" (click)="connectXero()" class="xero-connector--switch-org-text actionable-text align-center">
               Connect to Xero
             </h4>
             <h4 *ngIf="!xeroConnectionInProgress && !xeroTokenExpired && showDisconnectXero && isXeroConnected" class="xero-connector--switch-org-info-text align-center sub-text-color single-line-text">
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <app-configuration-step-footer-section [ctaText]="ConfigurationCtaText.CONTINUE" [isButtonDisabled]="isContinueDisabled" (save)="continueToNextStep()"></app-configuration-step-footer-section>
+    <app-configuration-step-footer-section [ctaText]="ConfigurationCtaText.SAVE_AND_CONTINUE" [isButtonDisabled]="isContinueDisabled" (save)="continueToNextStep()"></app-configuration-step-footer-section>
   </div>
 </div>
 <app-onboarding-footer [page]="'xero_connector'" *ngIf="!isLoading && isOnboarding"></app-onboarding-footer>
