xero-app-2 QA changes (#22)
xero-app-2 QA changes

--- a/src/app/integration/main/configuration/configuration.component.scss
+++ b/src/app/integration/main/configuration/configuration.component.scss
@@ -1,3 +1,7 @@
 .parent-configuration {
   padding-top: 240px;
 }
+:host ::ng-deep.configuration--contents {
+  height: 650px;
+  overflow: scroll;
+}
