xero connector component changes commit

--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
@@ -47,7 +47,7 @@
       How does the integration work?
     </h2>
     <h3 class="landing--integration-data-flow-text-caption align-center sub-text-color">
-      Export expenses from Fyle and import chart of accounts, projects, and other data from Xero.
+      Export expenses from Fyle and import chart of accounts, customers, and other data from Xero.
     </h3>
   </div>
   <div class="landing--integration-data-image-section">
