query param updation changes commit

--- a/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.html
+++ b/src/app/shared/components/configuration/configuration-toggle-field/configuration-toggle-field.component.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 <div *ngIf="formControllerName === 'chartOfAccount'" class="configuration--field-toggle-note-section">
-  <h5 class="configuration--field-label sub-text-color paragraph">NOTE: If you have already created categories in Fyle, you can skip this and map your <br> categories to corresponding Xero accounts after completing configuration in <b>Integration <br> Dashboard > Mappings Section </b></h5>
+  <h5 class="configuration--field-label sub-text-color paragraph">NOTE: If you don't want to import all the values and want to use only the categories you've added in Fyle, you can skip this step. Instead, after completing the integration configuration, you can map the categories that are already set up in Fyle to their corresponding Xero accounts under <b>Integration <br> Dashboard > Mappings Section </b></h5>
 </div>
 <div *ngIf="formControllerName === 'importCustomers'" class="configuration--field-toggle-note-section">
   <h5 class="configuration--field-label sub-text-color paragraph">NOTE: To export billable expenses from Fyle, import Customers from Xero as Projects in Fyle.</h5>
