--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
@@ -16,7 +16,7 @@
       </app-configuration-select-field>
       
       <div *ngIf="advancedSettingsForm.value.paymentSync && advancedSettingsForm.value.paymentSync === 'fyle_to_xero'">
-        <app-configuration-select-field [form]="advancedSettingsForm" [xeroAttributes]="billPaymentAccounts"
+        <app-configuration-select-field [form]="advancedSettingsForm" [options]="billPaymentAccounts"
           [isFieldMandatory]="true" [mandatoryErrorListName]="'payment account'"
           [label]="'To which Payment account should the payment entries be posted?'"
           [subLabel]="'Once the payment for the reimbursable expense is complete in Fyle, the payment entries will be posted to the selected Payment account in Xero.'"
@@ -64,6 +64,12 @@
         [iconPath]="'assets/images/svgs/general/expense.svg'" [label]="'Auto create Contacts'"
         [subLabel]="'While exporting reimbursable expenses from Fyle, the integration will automatically create a Contact if a match for an employee in Fyle does not exist in Xero already.'"
         [formControllerName]="'autoCreateVendors'">
+      </app-configuration-toggle-field>
+
+      <app-configuration-toggle-field [form]="advancedSettingsForm"
+        [iconPath]="'assets/images/svgs/general/expense.svg'" [label]="'Auto Create Fyle Merchants as Contacts on Xero'"
+        [subLabel]="'While exporting corporate card expenses from Fyle, the integration will auto-create a contact in Xero if a merchant added in Fyle does not exist in Xero.'"
+        [formControllerName]="'autoCreateMerchantDestinationEntity'">
       </app-configuration-toggle-field>
 
       <app-configuration-step-footer-section
