--- a/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
+++ b/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <app-configuration-step-footer-section [ctaText]="ConfigurationCtaText.SAVE_AND_CONTINUE" [isButtonDisabled]="isContinueDisabled" (save)="continueToNextStep()"></app-configuration-step-footer-section>
+    <app-configuration-step-footer-section [ctaText]="!xeroConnectionInProgress ? (isOnboarding ? ConfigurationCtaText.SAVE_AND_CONTINUE : ConfigurationCtaText.SAVE) : ConfigurationCtaText.SAVING" [isButtonDisabled]="isContinueDisabled" (save)="continueToNextStep()"></app-configuration-step-footer-section>
   </div>
 </div>
 <app-onboarding-footer [page]="'xero_connector'" *ngIf="!isLoading && isOnboarding"></app-onboarding-footer>
