--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
@@ -16,7 +16,7 @@
       </app-configuration-select-field>
       
       <div *ngIf="advancedSettingsForm.value.paymentSync && advancedSettingsForm.value.paymentSync === 'fyle_to_xero'">
-        <app-configuration-select-field [form]="advancedSettingsForm" [options]="billPaymentAccounts"
+        <app-configuration-select-field [form]="advancedSettingsForm" [xeroAttributes]="billPaymentAccounts"
           [isFieldMandatory]="true" [mandatoryErrorListName]="'payment account'"
           [label]="'To which Payment account should the payment entries be posted?'"
           [subLabel]="'Once the payment for the reimbursable expense is complete in Fyle, the payment entries will be posted to the selected Payment account in Xero.'"
