--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
@@ -39,8 +39,9 @@
           </mat-select>
           <div class="mat-select-arrow-closed"></div>
         </mat-form-field>
+        <app-mandatory-error-message *ngIf="advancedSettingsForm.controls.exportScheduleFrequency.touched" [listName]="'frequency'"></app-mandatory-error-message>
         <!-- <app-configuration-select-field [form]="advancedSettingsForm" [options]="frequencyIntervals"
-          [placeholder]="'Select Frequency'" [formControllerName]="'exportScheduleFrequency'">
+          [placeholder]="'Select Frequency'" [isFieldMandatory]="true" [mandatoryErrorListName]="'Frequence'" [formControllerName]="'exportScheduleFrequency'">
         </app-configuration-select-field> -->
       </div>
 
