--- a/src/app/integration/main/configuration/configuration.component.scss
+++ b/src/app/integration/main/configuration/configuration.component.scss
@@ -4,4 +4,7 @@
 :host ::ng-deep.configuration--contents {
   height: 650px;
   overflow: scroll;
+  @media only screen and (max-width: 1440px) {
+    height: 780px
+  }
 }
