Fix bugs across app (#23)
* resolve mapping error componenet chnages commit

* xero connector component changes commit

* unit test changes commit

* query param updation changes commit

* cut off date updation changes commit

* auto_create_merchant_destination_entity updation commit

* auto_create_merchant_destination_entity updation commit 1

* auto_create_merchant_destination_entity updation commit 2

* bug fixing commit

* bug fixing commit 2

* bug fixing commit 3

* Fix redirection to old app (#26)

Fix redirection to old app

* bug fixing commit 4

* bug fixing commit 5

* PR commands resolve commit

* PR commands resolve commit

Co-authored-by: Fyle <fyle@Fyles-MacBook-Air.local>
Co-authored-by: Ashwin Thanaraj <37061471+ashwin1111@users.noreply.github.com>

--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
@@ -39,8 +39,9 @@
           </mat-select>
           <div class="mat-select-arrow-closed"></div>
         </mat-form-field>
+        <app-mandatory-error-message *ngIf="advancedSettingsForm.controls.exportScheduleFrequency.touched" [listName]="'frequency'"></app-mandatory-error-message>
         <!-- <app-configuration-select-field [form]="advancedSettingsForm" [options]="frequencyIntervals"
-          [placeholder]="'Select Frequency'" [formControllerName]="'exportScheduleFrequency'">
+          [placeholder]="'Select Frequency'" [isFieldMandatory]="true" [mandatoryErrorListName]="'Frequence'" [formControllerName]="'exportScheduleFrequency'">
         </app-configuration-select-field> -->
       </div>
 
@@ -64,6 +65,12 @@
         [iconPath]="'assets/images/svgs/general/expense.svg'" [label]="'Auto create Contacts'"
         [subLabel]="'While exporting reimbursable expenses from Fyle, the integration will automatically create a Contact if a match for an employee in Fyle does not exist in Xero already.'"
         [formControllerName]="'autoCreateVendors'">
+      </app-configuration-toggle-field>
+
+      <app-configuration-toggle-field [form]="advancedSettingsForm"
+        [iconPath]="'assets/images/svgs/general/expense.svg'" [label]="'Auto Create Fyle Merchants as Contacts on Xero'"
+        [subLabel]="'While exporting corporate card expenses from Fyle, the integration will auto-create a contact in Xero if a merchant added in Fyle does not exist in Xero.'"
+        [formControllerName]="'autoCreateMerchantDestinationEntity'">
       </app-configuration-toggle-field>
 
       <app-configuration-step-footer-section
