--- a/src/app/shared/components/core/header/header.component.scss
+++ b/src/app/shared/components/core/header/header.component.scss
@@ -70,10 +70,6 @@
     padding-top: 7px;
   }
 
-  &--signout-section {
-    padding-bottom: 16px;
-  }
-
   &--signout-text {
     font-size: 14px;
     padding-left: 6px;
@@ -99,8 +95,11 @@
 
   &--help-center-content {
     height: 50px;
-    background: #F5F5F5;
     padding-left: 16px;
+  }
+
+  &--help-center-content:hover {
+    background: #F5F5F5;
   }
 
   &--open-in-new-tab-icon {
