--- a/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
+++ b/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
@@ -45,7 +45,7 @@
             <app-loader [size]="'small'"></app-loader>
           </p>
         </div>
-        <div *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired && !isDisconnectXeroClicked" class="align-center default-cursor">
+        <div *ngIf="!xeroCompanyName && !isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired && !isDisconnectXeroClicked" class="align-center default-cursor">
           <mat-form-field floatLabel="always" appearance="outline">
             <mat-select placeholder="Select a Xero tenant" formControlName="xeroTenant">
               <mat-option *ngFor="let option of tenantList" [value]="{id: option.destination_id, name: option.value}" (click)="tenantSelected()">
@@ -59,7 +59,7 @@
         <div class="xero-connector--switch-org-section">
           <div class="xero-connector--org-switch-separator"></div>
           <div class="xero-connector--switch-org-inner-section">
-            <h4 *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired" class="xero-connector--connection-in-progress-text align-center sub-text-color"> 
+            <h4 *ngIf="!xeroCompanyName && !isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired" class="xero-connector--connection-in-progress-text align-center sub-text-color"> 
               You will need to select a tenant to proceed with the onboarding.
             </h4>
             <h4 *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired && isDisconnectXeroClicked" (click)="connectXero()" class="xero-connector--switch-org-text actionable-text align-center">
