--- a/src/app/shared/components/configuration/import-settings/import-settings.component.scss
+++ b/src/app/shared/components/configuration/import-settings/import-settings.component.scss
@@ -106,9 +106,10 @@
   }
 
   &--field-toggle-section {
-    padding: 20px 8px 20px 32px;
+    padding: 30px 8px 30px 32px;
     background: #FAFCFF;
     box-sizing: border-box;
+    border: 1px solid #F5F5F5;
   }
 
 }
