--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
@@ -11,7 +11,7 @@
         [options]="paymentSyncOptions" [iconPath]="'assets/images/svgs/actions/sync.svg'"
         [label]="'Auto - Sync payment between Fyle and Xero'"
         [subLabel]="'When an expense is marked as \'Paid\' in Fyle the corresponding transaction will automatically be updated to \'Paid\' in Xero and vice versa.'"
-        [placeholder]="'Select Auto - sync type'"
+        [placeholder]="'Select how payments should be synced for reimbursable expenses'"
         [formControllerName]="'paymentSync'">
       </app-configuration-select-field>
       
