--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div>
-      <iframe class="landing--guide-video" width="797" height="448" src="https://www.youtube.com/embed/b63lS2DG5j4"
+      <iframe class="landing--guide-video" width="797" height="448" src="https://www.youtube.com/embed/QCV6D29FwiU" 
         title="Fyle Xero Integration" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
