--- a/src/styles.scss
+++ b/src/styles.scss
@@ -246,6 +246,8 @@ th.mat-header-cell:last-of-type {
 
 .mat-option.mat-selected:not(.mat-option-multiple):not(.mat-option-disabled), .mat-option:focus:not(.mat-selected), .mat-option:hover:not(.mat-selected) {
   background: #0000000a !important;
+  border-radius: 4px !important;
+  margin: 2.5px;;
 }
 
 .mat-option.mat-active {
@@ -340,6 +342,9 @@ th.mat-header-cell:last-of-type {
 
 .mat-select-panel {
   margin-top: 50px;
+  background: #FFFFFF;
+  box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.1), 0px 4px 6px -2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px !important;
 }
 
 .mat-select-panel .mat-optgroup-label, .mat-select-panel .mat-option {
