--- a/src/app/shared/components/helpers/onboarding-stepper/onboarding-stepper.component.html
+++ b/src/app/shared/components/helpers/onboarding-stepper/onboarding-stepper.component.html
@@ -1,7 +1,7 @@
 <div class="stepper">
   <div class="stepper--header">
     <p class="stepper--header-text align-center">
-      Complete the following steps to configure your Integration.
+      Complete the following steps to configure your Integration
     </p>
   </div>
 
