--- a/src/app/integration/main/main.component.scss
+++ b/src/app/integration/main/main.component.scss
@@ -1,5 +1,5 @@
 .side-nav-bar {
-  background: #161528;
+  background: linear-gradient(185.1deg,#190f2f,#242c42 54.02%,#05091c 100.69%);
   height: 100%;
   padding-top: 17px;
   top: 72px;
@@ -25,8 +25,8 @@
   }
 
   &--module-block-content {
-    padding: 13px 0px 13px 24px;
-    height: 48px;
+    padding: 22px 0px 22px 24px;
+    // height: 48px;
     width: 260px;
     align-items: center;
 
@@ -36,9 +36,14 @@
     }
   }
 
+  &--child-module-block-content {
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+  }
+
   &--module-block-content-expandable {
-    padding: 13px 0px 13px 24px;
-    height: 48px;
+    padding: 22px 0px 22px 24px;
+    // height: 48px;
     width: 257px;
     align-items: center;
 
@@ -72,7 +77,7 @@
 
   &--active-tag-module {
     width: 3px;
-    height: 48px;
+    height: auto;
     background: #FF3366;
     border-radius: 1px;
   }
