--- a/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
+++ b/src/app/shared/components/configuration/xero-connector/xero-connector.component.html
@@ -8,19 +8,19 @@
           <h5 class="xero-connector--fyle-section-text align-center sub-text-color bold">
             FYLE
           </h5>
-          <h3 [matTooltip]="fyleOrgName" [matTooltipDisabled]="fyleOrgName.length > 26 === false" matTooltipPosition="left" matTooltipClass="left" class="align-center default-cursor single-line-text">
+          <h3 [matTooltip]="fyleOrgName" [matTooltipDisabled]="fyleOrgName.length > 26 === false" matTooltipPosition="left" matTooltipClass="left" class="align-center default-cursor single-line-text bold">
             {{ fyleOrgName | trimCharacter: 26 }}
           </h3>
         </div>
         <div class="xero-connector--switch-org-section">
           <div class="xero-connector--org-switch-separator"></div>
           <div class="xero-connector--switch-org-inner-section">
-            <h4 class="xero-connector--switch-org-info-text sub-text-color single-line-text">
+            <h5 class="xero-connector--switch-org-info-text sub-text-color single-line-text">
               Not the organization that you wish to connect?
-            </h4>
-            <h4 (click)="switchFyleOrg()" class="xero-connector--switch-org-text actionable-text align-center">
+            </h5>
+            <h5 (click)="switchFyleOrg()" class="xero-connector--switch-org-text actionable-text align-center">
               Switch Organization
-            </h4>
+            </h5>
           </div>
         </div>
       </div>
@@ -38,7 +38,7 @@
           <h5 class="xero-connector--fyle-section-text align-center sub-text-color bold">
             XERO TENANT
           </h5>
-          <h3 [matTooltip]="xeroCompanyName" [matTooltipDisabled]="xeroCompanyName.length > 26 === false" matTooltipPosition="right" matTooltipClass="right" *ngIf="!xeroConnectionInProgress && xeroCompanyName" class="default-cursor single-line-text align-center">
+          <h3 [matTooltip]="xeroCompanyName" [matTooltipDisabled]="xeroCompanyName.length > 26 === false" matTooltipPosition="right" matTooltipClass="right" *ngIf="!xeroConnectionInProgress && xeroCompanyName" class="default-cursor single-line-text align-center bold">
             {{ xeroCompanyName | trimCharacter: 26 }}
           </h3>
           <p class="align-center" *ngIf="xeroConnectionInProgress">
@@ -59,32 +59,31 @@
         <div class="xero-connector--switch-org-section">
           <div class="xero-connector--org-switch-separator"></div>
           <div class="xero-connector--switch-org-inner-section">
-            <h4 *ngIf="!xeroCompanyName && !isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired" class="xero-connector--connection-in-progress-text align-center sub-text-color"> 
+            <h5 *ngIf="!xeroCompanyName && !isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired" class="xero-connector--connection-in-progress-text align-center sub-text-color"> 
               You will need to select a tenant to proceed with the onboarding.
-            </h4>
-            <h4 *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired && isDisconnectXeroClicked" (click)="connectXero()" class="xero-connector--switch-org-text actionable-text align-center">
+            </h5>
+            <h5 *ngIf="!isXeroConnected && !xeroConnectionInProgress && !xeroTokenExpired && isDisconnectXeroClicked" (click)="connectXero()" class="xero-connector--switch-org-text actionable-text align-center">
               Connect to Xero
-            </h4>
-            <h4 *ngIf="!xeroConnectionInProgress && !xeroTokenExpired && showDisconnectXero && isXeroConnected" class="xero-connector--switch-org-info-text align-center sub-text-color single-line-text">
+            </h5>
+            <h5 *ngIf="!xeroConnectionInProgress && !xeroTokenExpired && showDisconnectXero && isXeroConnected" class="xero-connector--switch-org-info-text align-center sub-text-color single-line-text">
               Not the Tenant that you wish to connect with?
-            </h4>
-            <h4 *ngIf="xeroConnectionInProgress" class="xero-connector--connection-in-progress-text align-center sub-text-color">
+            </h5>
+            <h5 *ngIf="xeroConnectionInProgress" class="xero-connector--connection-in-progress-text align-center sub-text-color">
               Please hold on; we are fetching data from your Xero Tenant, which may take a few seconds.
-            </h4>
-            <h4 *ngIf="xeroTokenExpired && !xeroConnectionInProgress" class="xero-connector--connection-in-progress-text align-center sub-text-color">
+            </h5>
+            <h5 *ngIf="xeroTokenExpired && !xeroConnectionInProgress" class="xero-connector--connection-in-progress-text align-center sub-text-color">
               Token expired
-            </h4>
-            <h4 *ngIf="!xeroConnectionInProgress && xeroTokenExpired" (click)="connectXero()" class="xero-connector--switch-org-text actionable-text align-center">
+            </h5>
+            <h5 *ngIf="!xeroConnectionInProgress && xeroTokenExpired" (click)="connectXero()" class="xero-connector--switch-org-text actionable-text align-center">
               Re-Connect to Xero
-            </h4>
-            <h4 *ngIf="!xeroConnectionInProgress && showDisconnectXero && isXeroConnected" (click)="disconnectXero()" class="xero-connector--switch-org-text actionable-text align-center">
+            </h5>
+            <h5 *ngIf="!xeroConnectionInProgress && showDisconnectXero && isXeroConnected" (click)="disconnectXero()" class="xero-connector--switch-org-text actionable-text align-center">
               Disconnect
-            </h4>
+            </h5>
           </div>
         </div>
       </div>
     </div>
-
     <app-configuration-step-footer-section [ctaText]="!xeroConnectionInProgress ? (isOnboarding ? ConfigurationCtaText.SAVE_AND_CONTINUE : ConfigurationCtaText.SAVE) : ConfigurationCtaText.SAVING" [isButtonDisabled]="isContinueDisabled" (save)="continueToNextStep()"></app-configuration-step-footer-section>
   </div>
 </div>
