QA changes commit 2

--- a/src/app/shared/components/dashboard/dashboard-resolve-mapping-error-dialog/dashboard-resolve-mapping-error-dialog.component.scss
+++ b/src/app/shared/components/dashboard/dashboard-resolve-mapping-error-dialog/dashboard-resolve-mapping-error-dialog.component.scss
@@ -30,7 +30,7 @@
     overflow: scroll;
     height: 830px;
     @media only screen and (max-width: 1440px) {
-      height: 650px;
+      height: 100%
     }
   }
 
