project import condition changes commit (#35)
project import condition changes commit

--- a/src/app/integration/main/main.component.scss
+++ b/src/app/integration/main/main.component.scss
@@ -1,5 +1,5 @@
 .side-nav-bar {
-  background: #161528;
+  background: linear-gradient(185.1deg,#190f2f,#242c42 54.02%,#05091c 100.69%);
   height: 100%;
   padding-top: 17px;
   top: 72px;
@@ -26,38 +26,54 @@
 
   &--module-block-content {
     padding: 13px 0px 13px 24px;
-    height: 48px;
+    // height: 48px;
     width: 260px;
     align-items: center;
 
     &:hover {
-      background: #252841;
+      background: linear-gradient(267.17deg,#383a51,#2b2e47);
       width: 260px;
     }
   }
 
+  &--child-module-block-content {
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
+  }
+
   &--module-block-content-expandable {
     padding: 13px 0px 13px 24px;
-    height: 48px;
+    // height: 48px;
     width: 257px;
     align-items: center;
 
     &:hover {
-      background: #252841;
+      background: linear-gradient(267.17deg,#383a51,#2b2e47);
       width: 257px;
     }
   }
 
+  &--module-block-expandable-export-log {
+    @extend .side-nav-bar--module-block-content-expandable;
+    padding-left: 21px !important;
+    width: 260px !important
+  }
+
+  &--active-module-block-expandable-export-log {
+    @extend .side-nav-bar--module-block-content-expandable;
+    padding-left: 18px !important;
+  }
+
   &--active-module {
-    background: #252841;
+    background: linear-gradient(267.17deg,#383a51,#2b2e47);
     width: 260px;
   }
 
   &--active-child {
-    background: #252841;
+    background: linear-gradient(267.17deg,#383a51,#2b2e47);
     width: 257px;
     &:hover {
-      background: #252841;
+      background: linear-gradient(267.17deg,#383a51,#2b2e47);
       width: 257px;
     }
   }
@@ -72,7 +88,7 @@
 
   &--active-tag-module {
     width: 3px;
-    height: 48px;
+    height: auto;
     background: #FF3366;
     border-radius: 1px;
   }
