--- a/src/app/shared/components/configuration/configuration-select-field/configuration-select-field.component.scss
+++ b/src/app/shared/components/configuration/configuration-select-field/configuration-select-field.component.scss
@@ -28,7 +28,8 @@
   }
 
   &--export-type {
-    padding-left: 8px;
+    font-weight: 700;
+    line-height: 20px;
   }
 
   &--auto-sync {
@@ -38,4 +39,5 @@
 
 p {
   margin: 0;
+  font-size: 14px;
 }
