--- a/src/app/integration/main/main.component.html
+++ b/src/app/integration/main/main.component.html
@@ -18,7 +18,7 @@
         <div *ngIf="module.name === 'Mappings' || module.name === 'Configuration'" class="side-nav-bar--separator"></div>
         <div fxLayout="row">
           <div *ngIf="module.isActive && (!module.childPages.length || !module.isExpanded)" class="side-nav-bar--active-tag-module"></div>
-          <div fxLayout="row" [ngClass]="[module.childPages.length ? 'side-nav-bar--module-block-content-expandable' : 'side-nav-bar--module-block-content', module.isActive && (!module.childPages.length || !module.isExpanded) ? 'side-nav-bar--active-module-block' : '', module.isActive && (!module.childPages.length || !module.isExpanded) ? 'side-nav-bar--active-module-block-expandable' : '']">
+          <div fxLayout="row" [ngClass]="[module.childPages.length ? 'side-nav-bar--module-block-content-expandable' : 'side-nav-bar--module-block-content', module.isActive && (!module.childPages.length || !module.isExpanded) ? 'side-nav-bar--active-module-block' : '', module.isActive && (!module.childPages.length || !module.isExpanded) ? 'side-nav-bar--active-module-block-expandable' : '', module.name === 'Export Log' ? 'side-nav-bar--module-block-expandable-export-log' : '', module.name === 'Export Log' && module.isActive ? 'side-nav-bar--active-module-block-expandable-export-log' : '']">
             <img [ngClass]="module.name === 'Export Log' ? 'side-nav-bar--export-icon' : 'side-nav-bar--icon'" src="{{ module.isActive ? module.iconPath + '-active.svg' :  module.iconPath + '.svg' }}">
             <h4 class="side-nav-bar--module-block-text side-nav-bar--text-properties capitalize">{{ module.name }}</h4>
             <img *ngIf="module.childPages.length && !module.isActive" height="10px" width="18px"
@@ -32,12 +32,12 @@
         <div>
           <div fxLayout="row">
             <div *ngIf="childPage.isActive && module.isExpanded" class="side-nav-bar--active-tag-module"></div>
-            <div *ngIf="module.isExpanded" fxLayout="row" class="side-nav-bar--module-block-content single-line-text pointer"
+            <div *ngIf="module.isExpanded" fxLayout="row" class="side-nav-bar--child-module-block-content side-nav-bar--module-block-content single-line-text pointer"
               [ngClass]="[childPage.isActive ? 'side-nav-bar--active-child': '', childPage.isActive ? 'side-nav-bar--active-module-text': '', childPage.isActive && module.isExpanded ? 'side-nav-bar--active-module-block' : '']" (click)="navigate(childPage)">
               <h4 matTooltip="{{childPage.name | titlecase | snakeCaseToSpaceCase}}" [matTooltipDisabled]="childPage.name.length > 25 === false" matTooltipPosition="right" matTooltipClass="right" class="side-nav-bar--module-block-text-inner side-nav-bar--text-properties capitalize"> {{ childPage.name | titlecase | snakeCaseToSpaceCase }}</h4>
             </div>
           </div>
-          <div *ngIf="module.isExpanded && module.name === 'Mappings' && module.childPages.length - 2 === i" class="side-nav-bar--separator"></div>
+          <div *ngIf="module.isExpanded && module.name === 'Mappings' && module.childPages.length - 2 === i && module.childPages[i+1].name === 'Custom Mapping'" class="side-nav-bar--separator"></div>
         </div>
       </div>
       <div #walkthrough *ngIf="showWalkThroughTooltip && module.name === 'Mappings'" class="walk-through-tooltip paragraph">
