--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,7 @@ body {
   margin: 0;
   font: 16px aktiv-grotesk,sans-serif;
   color: #161528;
+  background-color: #FAFAFA;
 }
 
 h3, h4, h5, h6 {
@@ -242,10 +243,13 @@ th.mat-header-cell:last-of-type {
   height: 40px;
   font-size: 14px !important;
   padding: 4px 0px 0px 14px !important;
+  background-color: white;
 }
 
 .mat-option.mat-selected:not(.mat-option-multiple):not(.mat-option-disabled), .mat-option:focus:not(.mat-selected), .mat-option:hover:not(.mat-selected) {
   background: #0000000a !important;
+  border-radius: 4px !important;
+  margin: 2px;
 }
 
 .mat-option.mat-active {
@@ -257,7 +261,7 @@ th.mat-header-cell:last-of-type {
 }
 
 .mat-form-field-wrapper {
-  padding-bottom: 0.5em;
+  padding-bottom: 0.1em !important;
 }
 
 .mat-accent .mat-option.mat-selected:not(.mat-option-disabled), .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
@@ -340,6 +344,9 @@ th.mat-header-cell:last-of-type {
 
 .mat-select-panel {
   margin-top: 50px;
+  background: #FFFFFF;
+  box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.1), 0px 4px 6px -2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px !important;
 }
 
 .mat-select-panel .mat-optgroup-label, .mat-select-panel .mat-option {
@@ -595,7 +602,7 @@ th.mat-header-cell:last-of-type {
 }
 
 .navbar {
-  height: 72px;
+  height: 66px;
   padding: 6px 16px;
 
   &--fyle-logo {
