background color change

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@ body {
   margin: 0;
   font: 16px aktiv-grotesk,sans-serif;
   color: #161528;
-  background-color: #FAFAFA;
+  background-color: #FFFFFF;
 }
 
 h3, h4, h5, h6 {
