--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
 <div fxLayoutAlign="center center" fxFlexFill>
-  <button class="btn-sign-in" mat-flat-button color="accent" (click)="login()" type="button">Sign in with
+  <button class="btn-sign-in" mat-flat-button color="accent" (click)="login()" type="button" data-cy="signin-button">Sign in with
     FYLE</button>
 </div>
