--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div fxFlexFill class="auth">
   <header class="auth-header" fxLayout="row" fxLayoutAlign="start center">
-    <img class="auth-header--logo" src="../../assets/images/pngs/fyle-logo-light.png" alt="Fyle">
-    <h3 class="auth-header--name mat-title">Fyle Xero Integration</h3>
+    <img class="auth-header--logo" src="../../assets/images/pngs/fyle-logo-light.png" alt="Fyle" data-cy="fyle-logo">
+    <h3 class="auth-header--name mat-title" data-cy="login-header">Fyle Xero Integration</h3>
   </header>
   <router-outlet></router-outlet>
 </div>
