--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<div fxLayoutAlign="center center" fxFlexFill>
+<div fxLayoutAlign="center center" fxFlexFill data-cy="signin-button">
   <button class="btn-sign-in" mat-flat-button color="accent" (click)="login()" type="button">Sign in with
     FYLE</button>
 </div>
