--- a/src/app/shared/components/core/header/header.component.html
+++ b/src/app/shared/components/core/header/header.component.html
@@ -1,14 +1,14 @@
-<div fxLayout="row" fxLayoutAlign="space-between center" class="navbar">
+<div fxLayout="row" fxLayoutAlign="space-between center" class="navbar" data-cy="nav-bar">
   <div fxLayout="row" fxLayoutAlign="space-between center">
-    <div fxLayout="row" class="navbar--logo-section">
+    <div fxLayout="row" class="navbar--logo-section" data-cy="nav-bar-logo-section">
       <div class="navbar--fyle-logo">
-        <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="80px" height="30px"/>
+        <img alt="Fyle" src="assets/images/svgs/logo/fyle.svg" width="80px" height="30px" data-cy="nav-bar-fyle-logo"/>
       </div>
       <div class="navbar--plus">
         +
       </div>
       <div>
-        <img alt="Xero" src="assets/images/svgs/logo/xero.svg" width="50px" height="50px" class="navbar--xero-logo" />
+        <img alt="Xero" src="assets/images/svgs/logo/xero.svg" width="50px" height="50px" class="navbar--xero-logo" data-cy="nav-bar-xero-logo"/>
       </div>
     </div>
     <img *ngIf="showBackButton && activePage" class="navbar--back-btn pointer" (click)="navigateBack()" src="assets/images/svgs/actions/arrow-mark-left-back.svg" />
@@ -35,9 +35,9 @@
         </p>
       </div>
 
-      <div class="navbar--profile-section">
+      <div class="navbar--profile-section" data-cy="user-profile-section">
         <div (click)="showOrHideProfileDropdown()">
-          <div class="pointer" [matTooltip]="user.full_name" [matTooltipDisabled]="user.full_name.length > 20 === false" matTooltipPosition="below" matTooltipClass="below profile-tooltip">
+          <div class="pointer" [matTooltip]="user.full_name" [matTooltipDisabled]="user.full_name.length > 20 === false" matTooltipPosition="below" matTooltipClass="below profile-tooltip" data-cy="profile-dropdown">
             {{ user.full_name | trimCharacter: 20 }}
           </div>
           <div class="navbar--user-org navbar--small-text sub-text-color pointer" [matTooltip]="user.org_name" [matTooltipDisabled]="user.org_name.length > 26 === false" matTooltipPosition="below" matTooltipClass="below">
@@ -104,7 +104,7 @@
 
             <div fxLayout="row" fxLayoutAlign="center center" class="profile--signout-section pointer" (click)="logout()">
               <img src="assets/images/svgs/actions/signout.svg" />
-              <div class="profile--signout-text">Signout</div>
+              <div class="profile--signout-text" data-cy="signout-text">Signout</div>
             </div>
 
           </div>
